--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "ffmpeg-static": "^5.3.0",
     "socket.io": "^4.8.1"
