--- a/server/package.json
+++ b/server/package.json
@@ -1,33 +1,16 @@
 {
-  "name": "youtube-playlist-downloader-server",
+  "name": "youtube-downloader-server",
   "version": "2.0.0",
-  "description": "Backend for YouTube playlist downloader",
-  "main": "electron-main.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "electron": "electron .",
-    "postinstall": "chmod +x yt-dlp"
+    "postinstall": "chmod +x yt-dlp || true"
   },
-  "keywords": [
-    "youtube",
-    "downloader",
-    "playlist",
-    "video",
-    "audio",
-    "mp4",
-    "mp3",
-    "yt-dlp"
-  ],
-  "author": "Your Name <your.email@example.com>",
-  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.2.1",
+    "socket.io": "^4.8.1",
     "ffmpeg-static": "^5.3.0",
-    "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
-    "electron": "^39.2.7"
+    "cors": "^2.8.5"
   }
 }
